<resources>
    // Strings for the app
    <string name="app_name">RecordBox</string>
    <string name="record_string">Record</string>
    <string name="box_string">Box</string>

    //string use for home page
    <string name="myAlbums">My Albums</string>

    //string use for search page
    <string name="example_search"></string>
    <string name="search">Album Search</string>
    <string name="no_result">No results</string>
    <string name="submit">Submit</string>


    //Strings for contact page
    <string name="Contact">Contact Us!</string>
    <string name="name_hint">Enter your name</string>
    <string name="Thanks">Thank you for contacting RecordBox.</string>
    <string name="Message">Message</string>
    <string name="Send">Send!</string>
    <string name="Remember">Remember Me?</string>

    // String will be use to store name of artist,albums name, song name
    <string name="Artist"></string>
    <string name="Song"></string>
    <string name="Album"></string>


    // Navigation content description
    <string name="btnImg_Home">Home Button</string>
    <string name="btnImg_Magnifying">Search Button</string>
    <string name="btnImg_ContactUs">Contact us Button</string>

    // Home Page content description and Text
    <string name="btnImg_logo_play_">Logo Play Button</string>
    <string name="btnImg_Add">Add Button</string>
    <string name="My_">My</string>
    <string name="MyAlbum">albums</string>
    <string name="aArtist">Artist</string>


    // Search Hint
    <string name="search_hint">Artist,Songs or Albums</string>


    // Content description
    <string name="discrtion_add_btn">Add button</string>

    // Back Arrow Description
    <string name="arrow_description">Back Arrow</string>


    // Navigation string
    <string name="homeNav">Home</string>
    <string name="searchNav">Search</string>
    <string name="contactUs">Contact Us</string>

    // Email information
    <string name="email_subject">%s</string>
    <string name="no_email_app">No email application installed!</string>
    <string name="emailMessage"><![CDATA[%s<br><br>%s]]></string>
    <string name="subject">Subject</string>
    <string name="email_address">Email Address</string>


    // Shared Data
    <string name="name">James</string>


</resources>
