<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".album">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/MyAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="260dp"
        android:layout_height="171dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnImg_logo_play_"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:srcCompat="@drawable/logo_transparent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@color/BackgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_Home"
            app:srcCompat="@drawable/house"
            tools:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_Magnifying"
            app:srcCompat="@drawable/magnifying_glass"
            tools:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_ContactUs"
            app:srcCompat="@drawable/comntact_us"
            tools:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/BackgroundColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrow_description"
            android:padding="5sp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_arrow_back_black_48dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>