<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/search"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@color/BackgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_Home"
            app:srcCompat="@drawable/house"
            tools:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_Magnifying"
            app:srcCompat="@drawable/magnifying_glass"
            tools:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/nav_icon_size_width"
            android:layout_height="@dimen/nav_icon_size_height"
            android:layout_weight="1"
            android:contentDescription="@string/btnImg_ContactUs"
            app:srcCompat="@drawable/comntact_us"
            tools:layout_weight="1" />
    </LinearLayout>

    <SearchView
        android:layout_width="318dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/searchview_rounded"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>