<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OurActivity.MainActivity">




    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="260dp"
        android:layout_height="171dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnImg_logo_play_"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent" />

    <TextView
        android:id="@+id/recyclerViewTitle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@+id/imageButton2"
        android:textSize="20sp"
        android:text="@string/myAlbums"/>

    <ImageButton
        android:id="@+id/addAlbum"
        android:contentDescription="@string/btnImg_Add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@+id/imageButton2"
        android:src="@drawable/add_icon"
        android:scaleType="fitXY"
        android:layout_toRightOf="@id/recyclerViewTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="550dp"
        android:layout_below="@+id/recyclerViewTitle"
        android:background="@android:color/background_light"
        android:padding="4dp"
        android:scrollbars="vertical"

        />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2">



    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="9dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />





</RelativeLayout>

